--- a/src/App.css
+++ b/src/App.css
@@ -14,18 +14,6 @@ html {
   z-index: 10;
   padding: 2rem;
 }
-.fade-in-section {
-  opacity: 0;
-  transform: translateY(10vh);
-  visibility: hidden;
-  transition: opacity 0.6s ease-out, transform 1s ease-out;
-  will-change: opacity, visibility;
-}
-.fade-in-section.is-visible {
-  opacity: 1;
-  transform: none;
-  visibility: visible;
-}
 
 .App {
   font-family: "NTR", sans-serif;
@@ -57,7 +45,7 @@ a {
 }
 
 ::selection {
-  background: var(--navy);
+  background: #13432675;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -75,7 +63,7 @@ a {
 
 .section-header {
   display: flex;
-  padding-bottom: 42px;
+  margin-bottom: 30px;
   width: 100vw;
 }
 
