--- a/src/styles/TechStack.css
+++ b/src/styles/TechStack.css
@@ -1,7 +1,7 @@
 #tech-stack {
-  min-height: 50vh;
-  margin: 150px auto;
+  margin: auto;
   max-width: 1100px;
+  margin-top: 50px;
   display: flex;
   flex-direction: column;
   position: relative;
@@ -11,7 +11,7 @@
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   gap: 30px;
-  margin-top: 50px;
+  margin-top: 30px;
 }
 
 .tech-icon-container {
@@ -20,12 +20,11 @@
   justify-content: center;
   padding: 20px;
   border-radius: 10px;
-  background-color: rgba(11, 15, 29, 0.8);
+  background-color: var(--color-select);
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
   aspect-ratio: 1/1;
   cursor: pointer;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-  will-change: transform, box-shadow;
+  transition: var(--transition);
   position: relative;
   max-width: 110px; 
   margin: 0 auto;
