--- a/src/styles/Timeline.css
+++ b/src/styles/Timeline.css
@@ -67,11 +67,11 @@
   position: absolute;
   left: 50%;
   top: 15px;
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
-  background-color: var(--navy);
-  border: 4px solid var(--green-bright);
+  background-color: var(--color-hover);
+  border: 3px solid var(--green-bright);
   transform: translateX(-50%);
   display: flex;
   align-items: center;
@@ -92,7 +92,8 @@
 .timeline-content {
   width: 45%;
   padding: 25px;
-  background-color: var(--color-hover);
+  background-color: var(--color-select);
+   backdrop-filter: blur(4px);
   border-radius: 8px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
   position: relative;
@@ -138,30 +139,6 @@
 
 .timeline-item.right .timeline-actions {
   justify-content: flex-start; 
-}
-
-.timeline-item.left .timeline-content::after {
-  content: '';
-  position: absolute;
-  top: 20px;
-  right: -10px;
-  width: 0;
-  height: 0;
-  border-top: 10px solid transparent;
-  border-bottom: 10px solid transparent;
-  border-left: 10px solid var(--color-hover);
-}
-
-.timeline-item.right .timeline-content::after {
-  content: '';
-  position: absolute;
-  top: 20px;
-  left: -10px;
-  width: 0;
-  height: 0;
-  border-top: 10px solid transparent;
-  border-bottom: 10px solid transparent;
-  border-right: 10px solid var(--color-hover);
 }
 
 .timeline-content h2 {
@@ -306,11 +283,10 @@
   .timeline-dot {
     left: 30px;
   }
-  
+
   .timeline-item.left,
   .timeline-item.right {
-    justify-content: flex-start;
-    margin-left: 60px;
+    justify-content: flex-end;
   }
   
   .timeline-content {
@@ -330,9 +306,10 @@
   
   .timeline-item.left .timeline-date,
   .timeline-item.right .timeline-date {
-    left: 0;
-    right: auto;
+    left: 80px;
+    right: 0;
     top: -30px;
+    font-size: 16px;
   }
   
   .timeline-item.left .timeline-actions,
