--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -14,7 +14,7 @@
   position: relative;
   padding: 30px;
   border-radius: 16px;
-  background-color: var(--color-select);
+  background-color: var(--box-color);
   backdrop-filter: blur(10px);
   box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1);
   z-index: 1;
