--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -1,14 +1,11 @@
 :root {
-  --lightest-slate: #e2e8fd; /* Headings */
+  --bg-gradient: linear-gradient(to bottom,#03141a 0%,#030817 20%, #060a17 40%, #030817 60%); /* Page Background Color */
+  --lightest-slate: #e2e8fd; /* Headings, Text */
   --nav-color: #03141a10; /* NavBar */
   --mobile-nav: #03141ad5; /* NavBar */
-  --linear-gradient: linear-gradient(to bottom,#03141a 0%,#030817 20%, #060a17 40%, #030817 60%); /* Page Background Color */
   --green-bright: #64D98A; /* Highlight Text, Glow, Tags */
-  --color-hover: rgba(11, 15, 29); /* Box Color, Hover Color */
-  --color-select: rgba(11, 15, 29, 0.8); /* Select Color */
-  --off-white: #a8b2d1; /* TEXT MAIN */
-  --navy: #0E192D; /* Selection */
-  --light-grey: #3d3d3d; /* Divider */
+  --color-hover: #0b0f1d; /* Box Color, Hover Color */
+  --box-color: rgba(11, 15, 29, 0.8); /* Box Color Transparent */
   --shadow: 0 4px 4px #0e0e0e60; /* Shadow */
   --shadow-box: 0 0 12px #000000c9; /* Shadow */
   --drop-shadow: drop-shadow(0 3px 4px rgb(0, 255, 85)); /* Drop Shadow */
