--- a/src/styles/TechStack.css
+++ b/src/styles/TechStack.css
@@ -20,7 +20,7 @@
   justify-content: center;
   padding: 20px;
   border-radius: 10px;
-  background-color: var(--color-select);
+  background-color: var(--box-color);
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
   aspect-ratio: 1/1;
   cursor: pointer;
