--- a/src/styles/Timeline.css
+++ b/src/styles/Timeline.css
@@ -27,7 +27,7 @@
   left: 0;
   width: 100%;
   height: 0;
-  background: linear-gradient(to bottom,  var(--off-white), var(--green-bright), var(--green-bright));
+  background: linear-gradient(to bottom,  var(--lightest-slate), var(--green-bright), var(--green-bright));
   background-size: 100% 200%;
   z-index: 1;
   border-radius: 2px;
@@ -92,8 +92,8 @@
 .timeline-content {
   width: 45%;
   padding: 25px;
-  background-color: var(--color-select);
-   backdrop-filter: blur(4px);
+  background-color: var(--box-color);
+  backdrop-filter: blur(4px);
   border-radius: 8px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
   position: relative;
