--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -6,10 +6,11 @@
   --green-bright: #64D98A; /* Highlight Text, Glow, Tags */
   --color-hover: #0b0f1d; /* Box Color, Hover Color */
   --box-color: rgba(11, 15, 29, 0.8); /* Box Color Transparent */
+  --anchor-text: linear-gradient(90deg, var(--green-bright), cyan);
   --shadow: 0 4px 4px #0e0e0e60; /* Shadow */
   --shadow-box: 0 0 12px #000000c9; /* Shadow */
-  --drop-shadow: drop-shadow(0 3px 4px rgb(0, 255, 85)); /* Drop Shadow */
-  --transition: all 0.25s cubic-bezier(0.645,0.045,0.355,1); /* Transition */ 
+  --drop-shadow: drop-shadow(0 0 3px cyan); /* Drop Shadow */
+  --transition: all 0.3s cubic-bezier(0.645,0.045,0.355,1); /* Transition */ 
   --bottom-gradient: linear-gradient(120deg,rgba(100, 217, 138, 0.8),rgba(100, 217, 138, 0.3),rgba(65, 199, 199, 0.6),rgba(100, 217, 138, 0.3), rgba(100, 217, 138, 0.8)); /* Bottom Border Gradient */
   --gradient-border: linear-gradient(120deg,rgba(100, 217, 138, 0.8),rgba(100, 217, 138, 0.1),rgba(65, 199, 199, 0.6),rgba(100, 217, 138, 0.2));
 }
