--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -29,7 +29,7 @@
 }
 
 .gradient-text {
-  background: linear-gradient(90deg, var(--green-bright));
+  background: var(--anchor-text);
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -309,10 +309,10 @@
 }
 
 .image-overlay span {
-  color: white;
+  color: var(--lightest-slate);
   font-weight: 600;
   padding: 8px 16px;
-  border: 2px solid white;
+  border: 2px solid var(--lightest-slate);
   border-radius: 4px;
   background-color: rgba(0, 0, 0, 0.2);
 }
@@ -323,6 +323,7 @@
 
 .project-title {
   font-size: 30px;
+  color: var(--green-bright);
   margin: 0 0 15px 0;
   font-weight: 700;
 }
@@ -368,7 +369,10 @@
   display: flex;
   gap: 15px;
   margin-top: 20px;
-  justify-content: flex-end; /* Right align links */
+  justify-content: flex-end;
+  padding-right: 5px;
+  padding-bottom: 5px;
+  overflow: visible;
 }
 
 .icon-link {
@@ -386,7 +390,7 @@
 
 .icon-link:hover {
   box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1);
-  color: white;
+  color: var(--lightest-slate);
 }
 
 .icon-link svg {
