--- a/src/styles/SideNavBar.css
+++ b/src/styles/SideNavBar.css
@@ -53,12 +53,11 @@
   width: 22px;
   height: 22px;
   margin: 0 0 20px 0;
-
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 1260px) {
   .side-navbar {
-    padding: 0px 40px;
+    margin-left: 10px;
   }
 }
 
