--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -106,20 +106,14 @@
   margin-left: 10px;
 }
 
-.logo {
-  display: flex;
-  align-items: center;
+.logo-container {
   margin-left: -15px;
-  scale: 1.2;
-  transition: transform 0.3s cubic-bezier(0.68, -0.55, 0.27, 1.55);
-  position: relative;
-}
-
-.logo:hover,
-.logo:focus {
-  transform: scale(1.2);
-  filter: var(--drop-shadow);
-  transition: all 0.4s cubic-bezier(0.68, -0.55, 0.27, 1.55);
+  background-color: transparent;
+  width: 36px;
+  height: 36px;
+  scale: 1;
+  border-radius: 10px; 
+  transition: var(--transition);
 }
 
 .hamburger-menu {
@@ -220,7 +214,11 @@
   }
   
   .logo {
-    margin: 0px -30px;
+    margin-left: 0px;
+  }
+
+   .logo-container {
+    margin-left: -30px;
   }
 }
 
@@ -257,6 +255,10 @@
   }
   
   .logo {
+    margin-left: 0px;
+  }
+
+   .logo-container {
     margin-left: 15px;
   }
   
