--- a/src/App.css
+++ b/src/App.css
@@ -40,9 +40,6 @@ a {
   justify-content: center;
   flex-direction: column;
 }
-.rs-steps-horizontal .rs-steps-item-content {
-  text-align: left;
-}
 
 ::selection {
   background: #13432675;
@@ -63,31 +60,17 @@ a {
 
 .section-header {
   display: flex;
+  justify-content: left;
   margin-bottom: 30px;
-  width: 100vw;
-}
-
-.section-header::after {
-  content: "";
-  display: none;
-  width: 300px;
-  margin-top: 27px;
-  height: 0.8px;
-  margin-left: 20px;
-  background-color: var(--light-grey);
+  position: relative;
 }
 
 .section-title {
   font-family: "NTR", sans-serif;
   color: var(--lightest-slate);
-  font-size: 36px;
-  font-weight: 650;
-}
-
-.section-title {
-  display: inline-block;
-  position: relative;
   padding-bottom: 10px;
+  font-size: 2.5rem;
+  font-weight: 650;
 }
 
 .section-title:after {
