--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -6,11 +6,41 @@
   --green-bright: #64D98A; /* Highlight Text, Glow, Tags */
   --color-hover: #0b0f1d; /* Box Color, Hover Color */
   --box-color: rgba(11, 15, 29, 0.8); /* Box Color Transparent */
-  --anchor-text: linear-gradient(90deg, var(--green-bright), cyan);
+  --anchor-text: linear-gradient(90deg, var(--green-bright) 50%, var(--lightest-slate));
   --shadow: 0 4px 4px #0e0e0e60; /* Shadow */
   --shadow-box: 0 0 12px #000000c9; /* Shadow */
   --drop-shadow: drop-shadow(0 0 3px cyan); /* Drop Shadow */
   --transition: all 0.3s cubic-bezier(0.645,0.045,0.355,1); /* Transition */ 
   --bottom-gradient: linear-gradient(120deg,rgba(100, 217, 138, 0.8),rgba(100, 217, 138, 0.3),rgba(65, 199, 199, 0.6),rgba(100, 217, 138, 0.3), rgba(100, 217, 138, 0.8)); /* Bottom Border Gradient */
   --gradient-border: linear-gradient(120deg,rgba(100, 217, 138, 0.8),rgba(100, 217, 138, 0.1),rgba(65, 199, 199, 0.6),rgba(100, 217, 138, 0.2));
+
+  .btn-effect {
+    position: relative;
+    transition: var(--transition);
+  }
+
+  .btn-effect:hover {
+    transform: translate(-5px, -5px);
+    outline: none;
+  }
+
+  .btn-effect::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%; 
+    bottom: 0;
+    left: 0;
+    background-color: transparent; 
+    transform: translate(0, 0) scale(1); 
+    transition: var(--transition);
+    z-index: -1;
+    border-radius: inherit; /* Takes border radius from parent */
+  }
+
+  .btn-effect:hover::after {
+    box-shadow: 4px 4px 0 0 var(--green-bright); 
+    transform: translate(0, 0) scale(1); 
+    z-index: -1; 
+  }
 }
