--- a/src/styles/Intro.css
+++ b/src/styles/Intro.css
@@ -40,42 +40,16 @@
   vertical-align: middle;
   transition: transform 0.3s ease;
 }
-
-.main-button, .outline-button {
-  display: inline-block;
+.outline-button {
   padding: 14px 26px;
   background-color: transparent;
   border: 1.5px solid var(--green-bright);
   border-radius: 4px;
-  color: var(--green);
+  color: var(--green-bright);
   font-size: 16px;
-  font-weight: 500;
-  text-decoration: none;
+  font-weight: 600;
   text-align: center;
-  transition: all 0.3s ease;
-}
-
-.main-button:hover, .outline-button:hover {
-  background-color: rgba(100, 255, 218, 0.1);
-  transform: translateY(-3px);
-}
-
-.outline-button::after {
-  content: '';
-  position: absolute;
-  width: 100%;
-  transform: scale(0);
-  height: 2px;
-  bottom: -2px;
-  left: 0;
-  background-color: var(--green-bright);
-  transform-origin: bottom right;
-  transition: transform 0.3s ease;
-}
-
-.outline-button:hover::after {
-  transform: scale(1);
-  transform-origin: bottom left;
+  transition: var(--transition);
 }
 
 .typist-content {
@@ -118,7 +92,10 @@
 }
 .intro-name {
   font-family: "NTR", sans-serif;
-  color: var(--green-bright);
+  background: var(--anchor-text);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
   font-weight: bold;
   font-size: 60px;
 }
@@ -128,24 +105,28 @@
   color: var(--lightest-slate);
   text-align: left;
   letter-spacing: 0.02em;
-  line-height: 1.5;
+  line-height: 2;
   font-size: 36px;
 }
 
 .intro-subtitle-name {
   font-family: "NTR", sans-serif;
-  color: var(--green-bright);
+  background: var(--anchor-text);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
   font-size: 36px;
+  font-weight: 600;
 }
 
 .intro-desc {
   color: var(--lightest-slate);
   letter-spacing: 0.02em;
-  line-height: 1.5;
+  line-height: 1.7;
   font-family: "NTR", sans-serif;
   font-size: 20px;
   text-align: left;
-  max-width: 550px;
+  max-width: 480px;
 }
 
 @media (max-width: 1350px) {
@@ -248,7 +229,7 @@
     text-align: center;
   }
   
-  .main-button, .outline-button {
+  .outline-button {
     padding: 8px 16px;
     font-size: 14px;
     letter-spacing: 0.5px;
