--- a/src/styles/Intro.css
+++ b/src/styles/Intro.css
@@ -209,8 +209,10 @@
   }
   
   .intro-name {
+    color: var(--green-bright);
+    background: none;
     font-size: 28px;
-  }
+}
 
   .intro-subtitle {
     font-size: 18px;
@@ -234,9 +236,16 @@
     font-size: 14px;
     letter-spacing: 0.5px;
   }
+
+  .windmill-cursor {
+    position: absolute !important;
+    top: 50% !important;
+    transform: translate(-100%, -50%) !important;
+    margin-left: 0 !important;
+  }
   
   .windmill-cursor svg {
-    width: 90%;
-    height: 90%;
+    width: 90% !important;
+    height: 90% !important;
   }
 }
