--- a/src/styles/Intro.css
+++ b/src/styles/Intro.css
@@ -152,6 +152,16 @@
     text-align: center;
     margin-bottom: 10px;
   }
+
+  .intro-subtitle-name {
+    color: var(--green-bright);
+  }
+
+  .intro-name {
+    color: var(--green-bright);
+    background: none;
+  }
+
   .intro-desc {
     text-align: center;
     margin: 0 auto;
@@ -164,13 +174,6 @@
   
   .intro-buttons {
     justify-content: center;
-  }
-}
-
-@media (max-width: 992px) {
-  .intro-name {
-    color: var(--green-bright);
-    background: none;
   }
 }
 
@@ -219,7 +222,7 @@
     color: var(--green-bright);
     background: none;
     font-size: 28px;
-}
+  }
 
   .intro-subtitle {
     font-size: 18px;
