--- a/src/styles/SideNavBar.css
+++ b/src/styles/SideNavBar.css
@@ -16,8 +16,7 @@
 }
 .side-navbar a:hover {
   color: var(--green-bright) !important;
-  scale:1.1;
-  filter: var(--drop-shadow);
+  scale:1.15 !important;
   transition: var(--transition);
 }
 
@@ -45,9 +44,8 @@
 
 .side-navbar button.star-btn:hover {
   color: var(--green-bright) !important;
-  scale:1.1;
+  scale:1.15 !important;
   transition: var(--transition);
-  filter: var(--drop-shadow);
 }
 
 .sidenav-icon {
